--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "667da28a-7677-4154-aaf6-2f0136ac39c9"
 authors = ["iamfedoroff <iamfedoroff@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
