--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["iamfedoroff <iamfedoroff@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CUDAapi = "3895d2a7-ec45-59b8-82bb-cfc6a382f9b3"
+CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
